# examples

./: .gitignore  todolist.md
cpp/: CMakeLists.txt
cpp/class/: CMakeLists.txt  test_class.cpp
cpp/div/: CMakeLists.txt  test_div.cpp
cpp/filesystem/: CMakeLists.txt  test_filesystem.cpp  test_filesystem_dir_relation.cpp  test_filesystem_from_or_to_string.cpp  test_filesystem_loop_each_dir_item.cpp  test_filesystem_to_string.cpp
cpp/json/: CMakeLists.txt  jsoncpp.cmake  test_json.cpp
cpp/macro/: CMakeLists.txt  test_macro.cpp
cpp/map/: CMakeLists.txt  test_map.cpp
cpp/regex/: CMakeLists.txt  test_regex.cpp  test_regex_main.cpp
cpp/string/: CMakeLists.txt  test_string.cpp
cpp/type/: CMakeLists.txt  test_type.cpp  test_typedef.cpp
groovy/string/: remove_head_string.groovy
ruby/require_vs_load/: sub_module.rb  test_load.rb  test_require.rb
sed/: README.md  revserse.sh
